DSTEW-642 Fix issues with unexpected claim duplication validation message count